@startuml
title UML-діаграма концептуальних класів

hide circle
skinparam classAttributeIconSize 0

class "Користувач" {
  +ім’я : String
  +вік : Integer
  +алергії : String
  +ціль : String
}

class "ДаніПроЗдоров’я" {
  +вага : Float
  +зріст : Integer
  +індекс_маси_тіла : Float
  +рівень_активності : String
  +дієтичні_обмеження : String
}

class "ПланХарчування" {
  +сніданок : String
  +обід : String
  +вечеря : String
  +калорійність : Integer
}

class "Рекомендації" {
  +обсяг_води_на_день : Float
  +фізична_активність : String
}

class "Досягнення" {
  +кількість_тренувань : Integer
  +виконані_вправи : String
  +нагороди : String
}

class "Самоповага" {
  +рівень : Float
  +впевненість : String
}

class "ТанцювальніПодії" {
  +назва : String
  +тип_танцю : String
  +дата_проведення : Date
  +місце_проведення : String
}

"Користувач" "1" --> "1" "ДаніПроЗдоров’я" : має
"Користувач" "1" --> "1" "ПланХарчування" : отримує
"Користувач" "1" --> "*" "Досягнення" : має
"Користувач" "1" --> "1" "Самоповага" : отримує
"Користувач" "1" --> "*" "ТанцювальніПодії" : читає
"ПланХарчування" "1" --> "*" "Рекомендації" : містить

@enduml
